@@ -20,7 +20,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -39,25 +38,28 @@ public class MigrationScriptReaderImpl implements MigrationScriptReader {
     private final String esMigrationPrefix;
     private final List<String> esMigrationSuffixes;
     private final String lineSeparator;
+    private final boolean trimTrailingNewlineInMigrations;
 
     /**
-     * @param locations               Locations of migrations scripts, e.g classpath:es/migration or file:/home/migration
-     * @param encoding                migrations scripts encoding
-     * @param esMigrationFilePrefix   File name prefix for ES migrations.
-     * @param esMigrationFileSuffixes File name suffix for ES migrations.
-     * @param lineSeparator           Line separator. should be '\n' per default and only something else for backward compatibility / hash stability
+     * @param locations                       Locations of migrations scripts, e.g classpath:es/migration or file:/home/migration
+     * @param encoding                        migrations scripts encoding
+     * @param esMigrationFilePrefix           File name prefix for ES migrations.
+     * @param esMigrationFileSuffixes         File name suffix for ES migrations.
+     * @param lineSeparator                   Line separator. should be '\n' per default and only something else for backward compatibility / checksum stability
+     * @param trimTrailingNewlineInMigrations Whether to remove a trailing newline in migration scripts.
      */
-
     public MigrationScriptReaderImpl(List<String> locations,
                                      Charset encoding,
                                      String esMigrationFilePrefix,
                                      List<String> esMigrationFileSuffixes,
-                                     String lineSeparator) {
+                                     String lineSeparator,
+                                     boolean trimTrailingNewlineInMigrations) {
         this.locations = locations;
         this.encoding = encoding;
         this.esMigrationPrefix = esMigrationFilePrefix;
         this.esMigrationSuffixes = esMigrationFileSuffixes;
         this.lineSeparator = lineSeparator;
+        this.trimTrailingNewlineInMigrations = trimTrailingNewlineInMigrations;
     }
 
     /**
@@ -72,11 +74,11 @@ public class MigrationScriptReaderImpl implements MigrationScriptReader {
                         return readFromLocation(location);
                     } catch (URISyntaxException | IOException e) {
                         throw new MigrationException(
-                                String.format("couldn't read scripts from %s", location), e);
+                                "couldn't read scripts from %s".formatted(location), e);
                     }
                 })
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -94,8 +96,10 @@ public class MigrationScriptReaderImpl implements MigrationScriptReader {
         } else if (location.startsWith(FILE_PREFIX)) {
             return readScriptsFromFilesystem(location);
         } else {
-            throw new MigrationException(String.format("could not read location path %s, " +
-                            "should look like this: %ses/migration or this: %s/home/scripts/migration",
+            throw new MigrationException(("""
+                    could not read location path %s, \
+                    should look like this: %ses/migration or this: %s/home/scripts/migration\
+                    """).formatted(
                     location, CLASSPATH_PREFIX, FILE_PREFIX));
         }
     }
@@ -142,7 +146,7 @@ public class MigrationScriptReaderImpl implements MigrationScriptReader {
                         logger.debug("reading migration script '{}' from classpath...", resource);
                         try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(new ByteArrayInputStream(resource.load()), encoding))) {
                             Path p = Paths.get(resource.getPath());
-                            res.addAll(read(bufferedReader, p.getFileName().toString()).collect(Collectors.toList()));
+                            res.addAll(read(bufferedReader, p.getFileName().toString()).toList());
                         } catch (IOException e) {
                             throw new MigrationException("can't read script from classpath: " + resource, e);
                         }
@@ -163,6 +167,11 @@ public class MigrationScriptReaderImpl implements MigrationScriptReader {
         if (content.isEmpty()) {
             return Stream.empty();
         }
+
+        if (trimTrailingNewlineInMigrations && content.endsWith(lineSeparator)) {
+            content = content.substring(0, content.length() - lineSeparator.length());
+        }
+
         return Stream.of(new RawMigrationScript().setFileName(filename).setContent(content));
     }
 
